--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 machine:
   environment:
     GODIST: "go1.6.linux-amd64.tar.gz"
-    WS: "/home/ubuntu/.go_workspace/src/github.com/18F/cg-dashboard"
+    WS: "/home/ubuntu/.go_workspace/src/github.com/AusDTO/cg-dashboard"
     CF_API: "https://api.cloud.gov"
     CF_ORGANIZATION: "cf"
     CF_API_GC: "https://api.fr.cloud.gov"
@@ -42,14 +42,14 @@ test:
 deployment:
   deploy:
     branch: [master, staging, deprecated]
-    owner: 18F
+    owner: AusDTO
     commands:
       - cd $WS && pip install --user ruamel.yaml
       - cd $WS && export BUILD_INFO=build::$CIRCLE_BRANCH::$(date -u "+%Y-%m-%d-%H-%M-%S")::$CIRCLE_BUILD_NUM::$(deploy/npm-version.sh) && python deploy/vars-to-manifest.py
       - cd $WS && chmod a+x deploy/circle_deploy.sh && deploy/circle_deploy.sh
   production:
     tag: /[0-9]+(\.[0-9]+)*/
-    owner: 18F
+    owner: AusDTO
     commands:
       - cd $WS && pip install --user ruamel.yaml
       - cd $WS && export BUILD_INFO=build::$CIRCLE_BRANCH::$(date -u "+%Y-%m-%d-%H-%M-%S")::$CIRCLE_BUILD_NUM::$(deploy/npm-version.sh) && python deploy/vars-to-manifest.py
