--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/18F/cg-dashboard
+package: github.com/AusDTO/cg-dashboard
 import:
 - package: github.com/cloudfoundry/loggregatorlib
   subpackages:
