--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "extract-text-webpack-plugin": "^0.8.1",
     "file-loader": "^0.8.5",
     "flux": "^2.0.3",
+    "gov-au-ui-kit": "git+https://github.com/AusDTO/gov-au-ui-kit.git#1.8.0",
     "immutable": "^3.8.1",
     "imports-loader": "^0.6.4",
     "istanbul": "^0.3.5",
