--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "codecov.io": "^0.1.5",
     "css-loader": "^0.23.0",
     "dedent": "^0.6.0",
+    "deepmerge": "^1.3.1",
     "director": "^1.2.8",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
